--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,31 +1,4 @@
 <div class="header">
-  <img class="logo" src="../../../assets/images/index.jpg" />
-  <div class="content">
-      <div class="title" style="text-align:center">
-          <h1>
-            Perkins Painting Co.
-          </h1>
-      </div>
-      <nav class="nav">
-        <button>
-          <a routerLink="/home" routerLinkActive="active">Home</a>
-        </button>
-        <button>
-          <a routerLink="/home" routerLinkActive="active">Testimonials</a>
-        </button>
-        <button>
-          <a routerLink="/home" routerLinkActive="active">About Us</a>
-        </button>
-        <button>
-          <a routerLink="/home" routerLinkActive="active">Contact</a>
-        </button>
-      </nav>
-  </div>
-  <div class="header-right">
-      <div class="contact">
-          <i class="fa fa-phone fa-3x"></i>
-          <p>(866)-330-1DAY</p>
-      </div>
-      <button class="job">Job Postings</button>
-  </div>
+  <img class="logo-1" src="../../../assets/images/index.jpg" />
+  <img class="logo-2" src="../../../assets/images/perkins.png" />
 </div>
