--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    margin: 0 15rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    @media (max-width: 426px) {
+        max-width: 426px;
+    }
+
+    @media (min-width: 427px) and (max-width: 725px) {
+        max-width: 725px;
+    }
+    
+    @media (min-width: 726px) {
+        max-width: 726px
+    }
+    
 }
