--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div>
+<div class="container">
+  <app-nav-bar></app-nav-bar>
   <app-header></app-header>
+  <router-outlet></router-outlet>
 </div>
 
-<router-outlet></router-outlet>
