--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -1,100 +1,15 @@
-
-
 .header {
-    margin: 0 auto;
-    padding: 0;
-    width: 100%;
-    height: 15rem;
-    background-color: white;
+    padding-top: 5rem;
     display: flex;
-    flex-direction: row;
-
-    h1 {
-        margin: 0 auto;
-        color: #0E244D;
-        font-size: 5rem;
-        font-family: 'Baloo Bhai', cursive;
-    }
-
-    .header-right {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        .contact {
-            display: flex;
-            flex-direction: row;
-            i {
-                margin: 1rem;
-                color: red;
-                align-self: center;
-            }
-            p {
-                font-family: 'Baloo Bhai', 'Times New Roman', Times, serif;
-                align-self: center;
-                font-size: 1.2rem;
-                text-decoration: underline;
-            }
-        }
-        .job {
-            margin: 2rem;
-            height: 4rem;
-            font-family: 'Baloo Bhai', 'Times New Roman', Times, serif;
-            font-size: 1.2rem;
-            color: #0E244D;
-            background-color: #FDF87D;
-            border-radius: .5rem;
-        }
-        .job:hover {
-            background-color: rgb(245, 183, 49);
-            color: white;
-
-        }
-        
-    }
-   
-    .logo {
-        margin: 1rem;
-        height: 13rem;
+    flex-direction: column;
+    align-items: center;
+    .logo-1 {
         width: 13rem;
         border-radius: 50%;
-        // border: .1rem solid white;
+        margin: 1rem 0;
     }
-
-    .content {
-        margin: .5rem;
-        display: flex;
-        flex-direction: column;
-        align-self: center;
-
-        .nav {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            
-            button {
-                width: 10rem;
-                height: auto;
-                border-radius: .5rem;
-                border: .1rem solid transparent;
-                background-color: #0571B8;
-                a {
-                    font-family: 'Baloo Bhai', 'Times New Roman', Times, serif;
-                    font-size: 1rem;
-                    text-decoration: none;
-                    color: white;
-                    
-                }
-            }
-            button:hover {
-                background-color: white;
-                border: .1rem solid #0571B8;
-                a {
-                    color: #0571B8;
-                }
-            }
-        }
+    .logo-2 {
+        height: 5.5rem;
+        margin-bottom: 1rem;
     }
 }
-
-
-
