trying to get images to load

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header">
-  <img class="logo-1" src="../../../assets/images/index.jpg" />
-  <img class="logo-2" src="../../../assets/images/perkins.png" />
+  <img class="logo-1" src="https://raw.githubusercontent.com/joelkperkins/perkins-painting/master/src/assets/images/index.jpg" />
+  <img class="logo-2" src="https://github.com/joelkperkins/perkins-painting/blob/master/src/assets/images/perkins.png" />
 </div>
