--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,26 +1,26 @@
 <div id="home" class="home-container">
     <div class="mission-container">
-        <img class="body-photo" src="https://github.com/joelkperkins/perkins-painting/blob/master/src/assets/images/san-diego-79567_960_720.jpg">
-        <div class="mission">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id urna erat. Mauris finibus varius mauris, quis efficitur turpis faucibus quis. Proin ac nunc ornare.</div>
+        <img class="body-photo" src="https://raw.githubusercontent.com/joelkperkins/perkins-painting/master/src/assets/images/san-diego-79567_960_720.jpg">
+        <div class="mission">Our mission is to offer quality painting services to New Home Residential, Multi Family, and Commercial Properties. Protecting and beautifying these structures to enhance the many doors we walk through in life.</div>
     </div>
     <!-- services -->
     <div>
         <h2 id="services" class="com-services">commercial services: </h2>
     </div>
     <div class="content-container">
-        <img class="content-photo" src="https://github.com/joelkperkins/perkins-painting/blob/master/src/assets/images/4880098443001_5581420638001_image-1505865777599.jpg">
+        <img class="content-photo" src="https://raw.githubusercontent.com/joelkperkins/perkins-painting/master/src/assets/images/4880098443001_5581420638001_image-1505865777599.jpg">
         <div class="text-box-white-fade">Interior / Exterior Production Painting for Master Planned Communities</div>
     </div>
     <div class="content-container">
-        <img class="content-photo-2" src="https://github.com/joelkperkins/perkins-painting/blob/master/src/assets/images/perkins-4.png">
+        <img class="content-photo-2" src="https://raw.githubusercontent.com/joelkperkins/perkins-painting/master/src/assets/images/perkins-4.png">
         <div class="text-box-white-fade">Single Family / Multi-Family / Apartments / Assisted Living / Resorts / Hotels</div>
     </div>
     <div class="content-container">
-        <img class="content-photo-2" src="https://github.com/joelkperkins/perkins-painting/blob/master/src/assets/images/perkins-5.png">
+        <img class="content-photo-2" src="https://raw.githubusercontent.com/joelkperkins/perkins-painting/master/src/assets/images/perkins-5.png">
         <div class="text-box-white-fade">Industrial Coating application for exposed steel members / Fire Resistant Intumescent Coatings</div>
     </div>
     <div class="content-container">
-        <img class="content-photo" src="https://github.com/joelkperkins/perkins-painting/blob/master/src/assets/images/perkins-2.png">
+        <img class="content-photo" src="https://raw.githubusercontent.com/joelkperkins/perkins-painting/master/src/assets/images/perkins-2.png">
         <div class="text-box-white-fade">Fine Stain and Decorative Finishes for Model Homes and/or Custom Interiors</div>
     </div>
     <!-- testimonies -->
@@ -52,8 +52,9 @@
         <h2 id="about" class="about-us">about us: </h2>
     </div>
     <div class="content-container">
-        <img class="content-photo" src="https://github.com/joelkperkins/perkins-painting/blob/master/src/assets/images/perkins-building.jpg">
-        <div class="text-box-white-fade">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+        <img class="content-photo" src="https://raw.githubusercontent.com/joelkperkins/perkins-painting/master/src/assets/images/perkins-building.jpg">
+        <div class="text-box-white-fade">Founded in 1969, Perkins Painting and Custom Coatings supplies painting services to the greater San Diego area and beyond.  We pride ourselves in offering competitive pricing while maintaining a production oriented schedule with quality and safety being our utmost priorities.  We are an employee owned company and always put family first.  We welcome you to be a part of the Perkins family!
+        </div>
     </div>
     <!-- contact us -->
     <div>
