--- a/src/app/components/home/home.component.less
+++ b/src/app/components/home/home.component.less
@@ -114,7 +114,7 @@
 .email-icon {
     font-size: 4rem;
     color: white;
-    padding: .4rem;
+    padding: .4rem .4rem .6rem .4rem;
 }
 
 .contact-form {
