--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-nav-bar></app-nav-bar>
   <app-header></app-header>
-  <router-outlet></router-outlet>
+  <app-home></app-home>
 </div>
 
